--- a/package.json
+++ b/package.json
@@ -8,9 +8,39 @@
     "exec:build": "node dist/main.js"
   },
   "devDependencies": {
-    "rollup": "^3.7.5"
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@rollup/plugin-image": "^2.1.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@vue/compiler-sfc": "^3.2.37",
+    "ant-design-vue": "1.7.8",
+    "autoprefixer": "^10.4.7",
+    "axios": "^1.3.4",
+    "cssnano": "^5.1.12",
+    "eslint": "^8.18.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-vue": "^9.1.1",
+    "postcss": "^8.4.14",
+    "rollup": "^2.75.6",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "9.1.3",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-node-resolve": "4.0.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-serve": "^2.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "5.1.9",
+    "vue": "2.6.14",
+    "vue-template-compiler": "2.6.14",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "stackblitz": {
     "startCommand": "npm run build"
+  },
+  "dependencies": {
+    "axios": "^1.5.0"
   }
 }
